--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="form-container">
-        <h2>Destaque sua casa ou negócio com a melhor pintura da região! SN Pinturas: qualidade para você.</h2>
+        <h2>Destaque sua casa ou negócio com a melhor pintura da região! SN Pinturas Gesso 3D e Drywall: Qualidade para você.</h2>
         <form id="contactForm">
             <div class="form-group">
                 <label for="name">Nome:</label>
