--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
         
         <div class="footer">
             <div class="redes-sociais">
-                <a href="https://www.instagram.com/sena_arts_grafites/" class="social-link" target="_blank" rel="noopener noreferrer">
+                <a href="https://www.instagram.com/sennagrafite?igsh=MWV1OXdjY2Ezd3ZjMQ%3D%3D" class="social-link" target="_blank" rel="noopener noreferrer">
                     <i class="fab fa-instagram"></i> Instagram
                 </a>
             </div>
